# Escoffier

./: .dockerignore  .env.example  .gitignore  .golangci.yml  AZURE_DEPLOYMENT.md  COST_OPTIMIZED_AZURE_GUIDE.md  DEPLOY.md  Dockerfile  LICENSE  MONOREPO.md  Makefile  README.md  SETUP.md  __init__.py  config.py  dev.sh  docker-compose.yml  escoffier_types.py  go.mod  go.sum  init.sql  prometheus.yml  pyproject.toml  refactor-to-escoffier.sh  requirements.txt  setup-github-models.sh  start-all.sh  stop-all.sh  verify-deployment.sh  verify.sh
.devcontainer/: devcontainer.json
.github/workflows/: azure-deploy.yml  build-release.yml  docker-build.yml  frontend.yml  go-test.yml  test-github-models.yml
agent/: index.ts
agent/roles/: ChefDePartie.ts  ExecutiveChef.ts  KitchenPorter.ts  LineCook.ts  PrepCook.ts  SousChef.ts
agents/: __init__.py  manager.py
api/: __init__.py  server.py
azure-infrastructure/: cost-optimized.bicep  deploy-cost-optimized.sh  deploy.sh  main.bicep  monitoring-setup.bicep  monitoring-workbook.json
backend/: agent.go  database.go  evaluation.go  kitchen.go  main.go  masterchef.db  orders.go
backend/handlers/: kitchen.go
cli/: __init__.py  client.go  go.mod  go.sum  main.go  main.py
cmd/: main.go
configs/: azure.env  config.yaml  config.yaml.example  github-models.yaml
data/: escoffier.db  example_scenarios.json  masterchef.db  sample_recipes.csv
data/analytics/reports/: analysis_report_8138c520-5c84-4b16-95c1-321aa56e4f6e.json  analysis_report_f9ff5c49-d539-41fd-a80d-b95d7c6f4fe9.json
data/paper/: masterchef.tex
database/: __init__.py  database.py  models.py
docs/: github-models-setup.md
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/components/: AgentMonitoring.tsx  BenchmarkControl.tsx  KitchenVisualization.tsx  LLMPlayground.css  LLMPlayground.test.tsx  LLMPlayground.tsx
grafana/dashboards/: masterchef-overview.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: prometheus.yml
guides/: agent-guide.md  llm-playground.md
internal/agents/: base.go  chef_de_partie.go  executive_chef.go  hr_system.go  kitchen_porter.go  line_cook.go  prep_cook.go  sous_chef.go
internal/api/: kitchen.go
internal/database/: db.go
internal/evaluation/: evaluator.go  evaluator_test.go  metrics.go  types.go
internal/models/: agent.go  equipment.go  inventory.go  kitchen.go  menu.go  order.go  prep.go  recipe.go  recipe_execution.go  registry.go  temperature.go
internal/models/providers/: azure_openai.go  github_models.go  provider.go
internal/monitoring/: monitor.go  monitor_test.go
internal/playground/: handlers.go  server.go  websocket.go
internal/playground/tests/: server_test.go
internal/prompts/agents/: executive_chef.md  kitchen_porter.md  line_cook.md  prep_cook.md  sous_chef.md
internal/tests/agents/: executive_chef_test.go  sous_chef_test.go
internal/tests/evaluation/: metrics_test.go
kitchen/: __init__.py  api.py  engine.py
metrics/: __init__.py  collector.py
models/: __init__.py  models.py
providers/: __init__.py  llm.py
recipes/: __init__.py  dataset_parser.py  kaggle_parser.py  manager.py  task_generator.py
scenarios/: __init__.py  executor.py
scripts/: setup.bat  setup.ps1  setup.sh
web/static/css/: playground.css
web/static/js/: playground.js
web/templates/: playground.html
