[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "escoffier"
version = "2.0.0"
description = "A Multi-Agent Kitchen Simulation Platform for Research"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "MasterChef-Bench Research Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "openai>=1.3.7",
    "anthropic>=0.7.7",
    "cohere>=4.37",
    "transformers>=4.36.0",
    "torch>=2.1.1",
    "accelerate>=0.25.0",
    "datasets>=2.14.7",
    "pandas>=2.1.3",
    "numpy>=1.25.2",
    "fire>=0.5.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "httpx>=0.25.2",
    "aiofiles>=23.2.0",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
    "plotly>=5.17.0",
    "kaleido>=0.2.1",
    "seaborn>=0.12.2",
    "matplotlib>=3.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
]

[project.scripts]
escoffier = "cli.main:main"

[project.urls]
Homepage = "https://github.com/raeeceip/escoffier"
Repository = "https://github.com/raeeceip/escoffier"
Issues = "https://github.com/raeeceip/escoffier/issues"

[tool.hatch.build.targets.wheel]
packages = [
    "agents",
    "api", 
    "cli",
    "database",
    "kitchen",
    "metrics",
    "providers",
    "recipes",
    "scenarios"
]
include = [
    "config.py",
    "escoffier_types.py",
    "__init__.py"
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
