[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "escoffier"
version = "2.0.0"
description = "A Multi-Agent Kitchen Simulation Platform for Research"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "MasterChef-Bench Research Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "transformers>=4.55.2",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
]

[project.scripts]
escoffier = "cli.main:main"

[project.urls]
Homepage = "https://github.com/raeeceip/escoffier"
Repository = "https://github.com/raeeceip/escoffier"
Issues = "https://github.com/raeeceip/escoffier/issues"

[tool.hatch.build.targets.wheel]
packages = [

    "api", 

    "database",
    "kitchen",
    "metrics",
    "providers",
    "recipes",

]
include = [

]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
